--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en">
 <head>
@@ -17,55 +18,13 @@
     .bad{color:#b00020;font-weight:600}
     .keys{display:grid;grid-template-columns:repeat(8,1fr);gap:10px;margin-top:10px}
     .key{padding:12px;border:1px solid #ddd;border-radius:12px;text-align:center;background:#fff}
+    .key.active{outline:3px solid #111}
     .hint{margin-top:6px;font-size:13px;color:#666}
     @media (max-width:720px){ .keys{grid-template-columns:repeat(4,1fr)} }
   </style>
 </head>
-<body>// ===== Musical keys (no key.wav needed) =====
-const AudioCtx = window.AudioContext || window.webkitAudioContext;
-const ctx = new AudioCtx();
 
-function playNote(freq, duration = 0.12) {
-  const osc = ctx.createOscillator();
-  const gain = ctx.createGain();
-
-  osc.type = "triangle"; // more musical than a click
-  osc.frequency.value = freq;
-
-  gain.gain.setValueAtTime(0.0001, ctx.currentTime);
-  gain.gain.exponentialRampToValueAtTime(0.35, ctx.currentTime + 0.01);
-  gain.gain.exponentialRampToValueAtTime(0.0001, ctx.currentTime + duration);
-
-  osc.connect(gain);
-  gain.connect(ctx.destination);
-
-  osc.start();
-  osc.stop(ctx.currentTime + duration);
-}
-
-// 16 notes (nice scale). You can change these later.
-const freqs = [
-  261.63, 293.66, 329.63, 349.23, // C D E F
-  392.00, 440.00, 493.88, 523.25, // G A B C
-  587.33, 659.25, 698.46, 783.99, // D E F G
-  880.00, 987.77, 1046.50, 1174.66 // A B C D
-];
-
-// Your 16 keys (same mapping you were using)
-const keyMap = ["1","2","3","4","q","w","e","r","a","s","d","f","z","x","c","v"];
-
-document.addEventListener("keydown", async (e) => {
-  // unlock audio on first interaction (important on phones)
-  if (ctx.state !== "running") await ctx.resume();
-
-  const k = e.key.toLowerCase();
-  const idx = keyMap.indexOf(k);
-  if (idx === -1) return;
-
-  playNote(freqs[idx], 0.12);
-});
-</body>
-
+<body>
   <h1>MyChillingTime 🎵</h1>
   <div class="small">Beat + many playable keys (real notes).</div>
 
@@ -83,28 +42,144 @@ document.addEventListener("keydown", async (e) => {
 
   <div class="box">
     <div class="small"><b>16 Keyboard Keys:</b>
+      <kbd>1</kbd> <kbd>2</kbd> <kbd>3</kbd> <kbd>4</kbd>
       <kbd>Q</kbd> <kbd>W</kbd> <kbd>E</kbd> <kbd>R</kbd>
       <kbd>A</kbd> <kbd>S</kbd> <kbd>D</kbd> <kbd>F</kbd>
-      <kbd>G</kbd> <kbd>H</kbd> <kbd>J</kbd> <kbd>K</kbd>
-      <kbd>U</kbd> <kbd>I</kbd> <kbd>O</kbd> <kbd>P</kbd>
+      <kbd>Z</kbd> <kbd>X</kbd> <kbd>C</kbd> <kbd>V</kbd>
     </div>
-
     <div class="keys" id="keysGrid"></div>
-
     <p class="small" style="margin-top:10px;">
       These keys generate real notes using the browser (no key.wav needed).
     </p>
   </div>
 
-  <!-- Beat (keep it simple: src on the audio tag is the most reliable) -->
+  <!-- Beat file (must be in same folder as index.html) -->
   <audio id="beat" src="bott.mp3" preload="auto" loop></audio>
 
   <script>
-    // ----- Beat controls -----
+    // =========================
+    // 1) Beat controls (bott.mp3)
+    // =========================
     const beat = document.getElementById("beat");
     const startBtn = document.getElementById("startBtn");
     const stopBtn  = document.getElementById("stopBtn");
     const statusEl = document.getElementById("status");
     const audioStatus = document.getElementById("audioStatus");
 
-    function setBeat 
+    function setBeatUI(isOn){
+      if (isOn) {
+        statusEl.textContent = "Beat: ON";
+        statusEl.classList.remove("bad");
+        statusEl.classList.add("ok");
+        startBtn.disabled = true;
+        stopBtn.disabled = false;
+      } else {
+        statusEl.textContent = "Beat: OFF";
+        statusEl.classList.remove("ok");
+        statusEl.classList.add("bad");
+        startBtn.disabled = false;
+        stopBtn.disabled = true;
+      }
+    }
+
+    // =========================
+    // 2) Musical keys (WebAudio)
+    // =========================
+    const AudioCtx = window.AudioContext || window.webkitAudioContext;
+    const ctx = new AudioCtx();
+
+    function setKeysUI(unlocked){
+      if (unlocked) {
+        audioStatus.textContent = "Keys: UNLOCKED";
+        audioStatus.classList.remove("bad");
+        audioStatus.classList.add("ok");
+      } else {
+        audioStatus.textContent = "Keys: LOCKED";
+        audioStatus.classList.remove("ok");
+        audioStatus.classList.add("bad");
+      }
+    }
+    setKeysUI(false);
+
+    async function unlockAudio() {
+      if (ctx.state !== "running") {
+        await ctx.resume();
+      }
+      setKeysUI(true);
+    }
+
+    function playNote(freq, duration = 0.12) {
+      const osc = ctx.createOscillator();
+      const gain = ctx.createGain();
+
+      osc.type = "triangle";
+      osc.frequency.value = freq;
+
+      const now = ctx.currentTime;
+      gain.gain.setValueAtTime(0.0001, now);
+      gain.gain.exponentialRampToValueAtTime(0.35, now + 0.01);
+      gain.gain.exponentialRampToValueAtTime(0.0001, now + duration);
+
+      osc.connect(gain);
+      gain.connect(ctx.destination);
+
+      osc.start(now);
+      osc.stop(now + duration);
+    }
+
+    const keyMap = ["1","2","3","4","q","w","e","r","a","s","d","f","z","x","c","v"];
+
+    // 16 notes (pleasant scale)
+    const freqs = [
+      261.63, 293.66, 329.63, 349.23,
+      392.00, 440.00, 493.88, 523.25,
+      587.33, 659.25, 698.46, 783.99,
+      880.00, 987.77, 1046.50, 1174.66
+    ];
+
+    // Build the visual key buttons
+    const keysGrid = document.getElementById("keysGrid");
+    keysGrid.innerHTML = "";
+    keyMap.forEach((k, i) => {
+      const div = document.createElement("div");
+      div.className = "key";
+      div.dataset.key = k;
+      div.innerHTML = `<b>${k.toUpperCase()}</b><div class="hint">${Math.round(freqs[i])} Hz</div>`;
+      div.addEventListener("pointerdown", async () => {
+        await unlockAudio();
+        playNote(freqs[i]);
+        div.classList.add("active");
+        setTimeout(() => div.classList.remove("active"), 120);
+      });
+      keysGrid.appendChild(div);
+    });
+
+    // Keyboard support
+    document.addEventListener("keydown", async (e) => {
+      const k = e.key.toLowerCase();
+      const idx = keyMap.indexOf(k);
+      if (idx === -1) return;
+
+      await unlockAudio();
+      playNote(freqs[idx]);
+
+      const el = document.querySelector(`[data-key="${k}"]`);
+      if (el) {
+        el.classList.add("active");
+        setTimeout(() => el.classList.remove("active"), 120);
+      }
+    });
+
+    // Start/Stop beat buttons
+    startBtn.addEventListener("click", async () => {
+      await unlockAudio(); // unlock keys + allow beat
+      try {
+        await beat.play();
+        setBeatUI(true);
+      } catch (err) {
+        console.log("Beat play error:", err);
+        alert("Beat did not play. Check that bott.mp3 is in the same folder as index.html and the name matches exactly.");
+      }
+    });
+
+    stopBtn.addEventListener("click", () => 
