--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   </div>
 
   <!-- Beat file (must be in same folder as index.html) -->
-  <audio id="beat" src="bott.mp3" preload="auto" loop></audio>
+ <audio id="beat" src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" preload="auto"></audio>
 
   <script>
     //
