--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
 <head>
@@ -11,7 +10,6 @@
     .box{padding:14px 16px;border:1px solid #ddd;border-radius:12px;margin:12px 0}
     button{padding:10px 14px;border-radius:10px;border:1px solid #111;background:#111;color:#fff;cursor:pointer}
     button:disabled{opacity:.5;cursor:not-allowed}
-    select,input{padding:10px 12px;border-radius:10px;border:1px solid #bbb;background:#fff}
     kbd{padding:2px 6px;border:1px solid #ccc;border-radius:6px;background:#f7f7f7}
     .row{display:flex;gap:10px;flex-wrap:wrap;align-items:center}
     .small{color:#555;font-size:14px}
@@ -19,196 +17,76 @@
     .bad{color:#b00020;font-weight:600}
     .keys{display:grid;grid-template-columns:repeat(8,1fr);gap:10px;margin-top:10px}
     .key{padding:12px;border:1px solid #ddd;border-radius:12px;text-align:center;background:#fff;user-select:none}
+    .key:active{transform:scale(.99)}
     .key.active{outline:3px solid #111}
-    .hint{margin-top:6px;font-size:13px;color:#666}
-    .pill{display:inline-block;padding:4px 10px;border-radius:999px;border:1px solid #ddd;background:#fafafa;font-size:12px;color:#444}
-    pre{white-space:pre-wrap;background:#0b1020;color:#d7e3ff;border-radius:12px;padding:12px;border:1px solid #1c2a52}
+    pre{white-space:pre-wrap;background:#0b1020;color:#d7e3ff;border-radius:12px;padding:12px;border:1px solid #1c2a52;max-height:220px;overflow:auto}
     @media (max-width:720px){ .keys{grid-template-columns:repeat(4,1fr)} }
   </style>
 </head>
-
 <body>
   <h1>MyChillingTime 🎵</h1>
-  <div class="small">Beat + playable keys + Konpa scales + Record/Loop (DEBUG mode).</div>
+  <div class="small">Beat + playable keys (stable build).</div>
 
-  <!-- DEBUG PANEL -->
-  <div class="box">
-    <div class="row">
-      <span class="pill" id="jsPill">JS: …</span>
-      <span class="pill" id="audioPill">Audio: …</span>
-      <span class="pill" id="mp3Pill">MP3: …</span>
-    </div>
-    <div class="row" style="margin-top:10px;">
-      <button id="testBeepBtn">Test Beep (WebAudio)</button>
-      <button id="testOnlineBeatBtn">Test Beat (Online MP3)</button>
-      <button id="testLocalBeatBtn">Test Beat (bott.mp3)</button>
-    </div>
-    <div class="small" style="margin-top:10px;">
-      If <b>Test Beep</b> works but MP3 doesn’t → beat file issue. If nothing works → browser sound blocked/muted.
-    </div>
-    <pre id="log">Log:\n</pre>
-  </div>
-
-  <!-- Instructions + share link -->
-  <div class="box">
-    <div class="small"><b>How to play:</b></div>
-    <div class="small">
-      1) Click <b>Start Beat</b> to unlock audio 🎧<br>
-      2) Use keys: <b>1 2 3 4 Q W E R A S D F Z X C V</b><br>
-      3) Tap the on-screen keys on mobile 📱
-    </div>
-    <p class="small" style="margin-top:10px;">
-      Share this link: <span id="shareLink"></span>
-    </p>
-  </div>
-
-  <!-- Controls -->
   <div class="box">
     <div class="row">
       <button id="startBtn">Start Beat</button>
       <button id="stopBtn" disabled>Stop Beat</button>
       <span id="status" class="small bad">Beat: OFF</span>
-      <span id="audioStatus" class="small bad">Keys: LOCKED</span>
-      <span id="loopStatus" class="pill">Loop: OFF</span>
+      <span id="keysStatus" class="small bad">Keys: LOCKED</span>
     </div>
 
-    <div class="row" style="margin-top:10px;">
-      <label class="small"><b>Scale:</b></label>
-      <select id="scaleSelect">
-        <option value="konpa_minor" selected>Konpa (Minor vibe)</option>
-        <option value="konpa_major">Konpa (Major vibe)</option>
-        <option value="pentatonic">Pentatonic (safe)</option>
-      </select>
-
-      <label class="small"><b>Loop (sec):</b></label>
-      <input id="loopLen" type="number" min="1" step="0.5" value="4" style="width:90px" />
-
-      <button id="recBtn">Record</button>
-      <button id="stopRecBtn" disabled>Stop Rec</button>
-      <button id="clearLoopBtn">Clear Loop</button>
+    <div class="small" style="margin-top:10px;">
+      Use keyboard: <b>1 2 3 4 Q W E R A S D F Z X C V</b> (or tap the boxes).
     </div>
 
-    <div class="hint">
-      Tip: Click <b>Start Beat</b> (or tap any key box) once to unlock audio. Record captures your notes and loops them.
-    </div>
+    <pre id="log">Log:\n</pre>
   </div>
 
   <div class="box">
-    <div class="small"><b>16 Keyboard Keys:</b>
-      <kbd>1</kbd> <kbd>2</kbd> <kbd>3</kbd> <kbd>4</kbd>
-      <kbd>Q</kbd> <kbd>W</kbd> <kbd>E</kbd> <kbd>R</kbd>
-      <kbd>A</kbd> <kbd>S</kbd> <kbd>D</kbd> <kbd>F</kbd>
-      <kbd>Z</kbd> <kbd>X</kbd> <kbd>C</kbd> <kbd>V</kbd>
-    </div>
-
+    <div class="small"><b>Keys</b></div>
     <div class="keys" id="keysGrid"></div>
-
-    <p class="small" style="margin-top:10px;">
-      Notes are generated in the browser (no key.wav needed).
-    </p>
   </div>
 
-  <!-- Beat file (must be in same folder as index.html) -->
+  <!-- IMPORTANT: keep bott.mp3 in the SAME folder as this index.html -->
   <audio id="beat" src="bott.mp3" preload="auto" loop></audio>
 
-  <!-- Online test beat (known working mp3) -->
-  <audio id="onlineBeat" preload="auto"></audio>
-
   <script>
-  (function () {
+    // ===== helpers =====
     const logEl = document.getElementById("log");
-    const jsPill = document.getElementById("jsPill");
-    const audioPill = document.getElementById("audioPill");
-    const mp3Pill = document.getElementById("mp3Pill");
+    function log(msg){ logEl.textContent += msg + "\n"; logEl.scrollTop = logEl.scrollHeight; }
 
-    function log(msg){
-      logEl.textContent += msg + "\n";
-    }
-
-    // If JS runs, we immediately show it
-    jsPill.textContent = "JS: OK";
-    jsPill.style.borderColor = "#0a7a2f";
-
-    // Share link (proves script is running)
-    document.getElementById("shareLink").textContent = window.location.href;
-
-    // Elements
-    const beat = document.getElementById("beat");
-    const onlineBeat = document.getElementById("onlineBeat");
-
+    const statusEl = document.getElementById("status");
+    const keysStatusEl = document.getElementById("keysStatus");
     const startBtn = document.getElementById("startBtn");
     const stopBtn  = document.getElementById("stopBtn");
-    const statusEl = document.getElementById("status");
-    const audioStatus = document.getElementById("audioStatus");
-    const loopStatus = document.getElementById("loopStatus");
-    const keysGrid = document.getElementById("keysGrid");
+    const beat = document.getElementById("beat");
 
-    const scaleSelect = document.getElementById("scaleSelect");
-    const loopLenInput = document.getElementById("loopLen");
-    const recBtn = document.getElementById("recBtn");
-    const stopRecBtn = document.getElementById("stopRecBtn");
-    const clearLoopBtn = document.getElementById("clearLoopBtn");
-
-    const testBeepBtn = document.getElementById("testBeepBtn");
-    const testOnlineBeatBtn = document.getElementById("testOnlineBeatBtn");
-    const testLocalBeatBtn = document.getElementById("testLocalBeatBtn");
-
-    // Volumes
-    beat.volume = 0.75;
-    onlineBeat.volume = 0.75;
-
-    // UI
-    function setBeatUI(isOn){
-      if (isOn) {
-        statusEl.textContent = "Beat: ON";
-        statusEl.classList.remove("bad");
-        statusEl.classList.add("ok");
-        startBtn.disabled = true;
-        stopBtn.disabled = false;
-      } else {
-        statusEl.textContent = "Beat: OFF";
-        statusEl.classList.remove("ok");
-        statusEl.classList.add("bad");
-        startBtn.disabled = false;
-        stopBtn.disabled = true;
-      }
+    function setBeatUI(on){
+      statusEl.textContent = on ? "Beat: ON" : "Beat: OFF";
+      statusEl.classList.toggle("ok", on);
+      statusEl.classList.toggle("bad", !on);
+      startBtn.disabled = on;
+      stopBtn.disabled = !on;
     }
-
     function setKeysUI(unlocked){
-      if (unlocked) {
-        audioStatus.textContent = "Keys: UNLOCKED";
-        audioStatus.classList.remove("bad");
-        audioStatus.classList.add("ok");
-        audioPill.textContent = "Audio: UNLOCKED";
-        audioPill.style.borderColor = "#0a7a2f";
-      } else {
-        audioStatus.textContent = "Keys: LOCKED";
-        audioStatus.classList.remove("ok");
-        audioStatus.classList.add("bad");
-        audioPill.textContent = "Audio: LOCKED";
-        audioPill.style.borderColor = "#ddd";
-      }
-    }
-
-    function setLoopUI(on){
-      loopStatus.textContent = on ? "Loop: ON" : "Loop: OFF";
-      loopStatus.style.borderColor = on ? "#0a7a2f" : "#ddd";
+      keysStatusEl.textContent = unlocked ? "Keys: UNLOCKED" : "Keys: LOCKED";
+      keysStatusEl.classList.toggle("ok", unlocked);
+      keysStatusEl.classList.toggle("bad", !unlocked);
     }
 
     setBeatUI(false);
     setKeysUI(false);
-    setLoopUI(false);
 
-    // Audio unlock
+    // ===== WebAudio (for keys) =====
     const AudioCtx = window.AudioContext || window.webkitAudioContext;
     const ctx = new AudioCtx();
-    let audioUnlocked = false;
+    let unlocked = false;
 
     async function unlockAudio(){
-      if (audioUnlocked) return true;
+      if (unlocked) return true;
       try{
         if (ctx.state !== "running") await ctx.resume();
-        audioUnlocked = true;
+        unlocked = true;
         setKeysUI(true);
         log("Audio unlocked ✅");
         return true;
@@ -218,14 +96,90 @@
       }
     }
 
-    // Note engine
-    const KEY_ATTACK = 0.01;
-    const KEY_PEAK   = 0.22;
-    const KEY_RELEASE = 0.12;
-
-    function playNoteAt(freq, startTime, duration = KEY_RELEASE, peak = KEY_PEAK) {
+    function playTone(freq){
+      const now = ctx.currentTime;
       const osc = ctx.createOscillator();
       const gain = ctx.createGain();
-
       osc.type = "triangle";
-      osc.frequency.value = freq
+      osc.frequency.setValueAtTime(freq, now);
+
+      gain.gain.setValueAtTime(0, now);
+      gain.gain.linearRampToValueAtTime(0.22, now + 0.01);
+      gain.gain.linearRampToValueAtTime(0, now + 0.14);
+
+      osc.connect(gain).connect(ctx.destination);
+      osc.start(now);
+      osc.stop(now + 0.16);
+    }
+
+    // ===== Key mapping (16 keys) =====
+    const KEY_ORDER = ["1","2","3","4","Q","W","E","R","A","S","D","F","Z","X","C","V"];
+    // Simple “safe” scale starting at C4
+    const SCALE = [261.63,293.66,329.63,349.23,392.00,440.00,493.88,523.25];
+
+    function freqForIndex(i){
+      const base = SCALE[i % SCALE.length];
+      return (i >= SCALE.length) ? base * 2 : base;
+    }
+
+    // On-screen keys
+    const keysGrid = document.getElementById("keysGrid");
+    const keyEls = new Map();
+    KEY_ORDER.forEach((k, i) => {
+      const div = document.createElement("div");
+      div.className = "key";
+      div.textContent = k;
+      div.addEventListener("pointerdown", async () => {
+        await unlockAudio();
+        playTone(freqForIndex(i));
+        flash(k);
+      });
+      keysGrid.appendChild(div);
+      keyEls.set(k, div);
+    });
+
+    function flash(k){
+      const el = keyEls.get(k);
+      if (!el) return;
+      el.classList.add("active");
+      setTimeout(() => el.classList.remove("active"), 90);
+    }
+
+    window.addEventListener("keydown", async (e) => {
+      const k = (e.key || "").toUpperCase();
+      const idx = KEY_ORDER.indexOf(k);
+      if (idx === -1) return;
+      await unlockAudio();
+      playTone(freqForIndex(idx));
+      flash(k);
+    });
+
+    // ===== Beat controls =====
+    async function startBeat(){
+      await unlockAudio(); // same click unlocks both
+      try{
+        beat.currentTime = 0;
+        await beat.play();     // must be user-gesture (this button click)
+        setBeatUI(true);
+        log("Beat started ✅");
+      }catch(e){
+        log("Beat play blocked/error: " + e);
+        log("TIP: make sure the tab isn't muted. Try Ctrl+F5 refresh then click Start Beat again.");
+      }
+    }
+
+    function stopBeat(){
+      beat.pause();
+      setBeatUI(false);
+      log("Beat stopped ⏹️");
+    }
+
+    startBtn.addEventListener("click", startBeat);
+    stopBtn.addEventListener("click", stopBeat);
+
+    // Quick sanity logs
+    beat.addEventListener("canplaythrough", () => log("bott.mp3 loaded ✅"));
+    beat.addEventListener("error", () => log("ERROR loading bott.mp3 ❌ (check name/path)"));
+  </script>
+</body>
+</html>
